# cryptoTools

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  build.py  copySourceToLinux.ps1  cryptoTools.sln  cryptoTools.vcxproj  cryptoTools.vcxproj.filters  cryptotools-config.cmake  nasm.sh  readme.md  tests.cpp
.github/workflows/: build-test.yml
Common/: ArrayView.h  BitIterator.h  BitVector.cpp  BitVector.h  ByteStream.cpp  ByteStream.h  Defines.cpp  Defines.h  Log.cpp  Log.h  Matrix.h  MatrixView.h  Timer.cpp  Timer.h
Crypto/: AES.h  Commit.h  Curve.cpp  Curve.h  PRNG.cpp  PRNG.h  sha1.cpp  sha1.h
Network/: Broadcaster.cpp  Broadcaster.h  BtAcceptor.cpp  BtAcceptor.h  BtChannel.cpp  BtChannel.h  BtEndpoint.cpp  BtEndpoint.h  BtIOService.cpp  BtIOService.h  BtSocket.h  Channel.cpp  Channel.h
cmake/: CheckISA.cmake  Config.cmake.in  cryptoToolsBuildOptions.cmake  cryptoToolsConfig.cmake  cryptoToolsConfigVersion.cmake  cryptoToolsDepHelper.cmake  cryptoToolsFindBuildDir.cmake  cryptoToolsHelper.cmake  install.cmake  loadCacheVar.cmake
cryptoTools/: CMakeLists.txt  OpenSSLSocket.cpp  cryptoTools.args.json  cryptoTools.vcxproj  cryptoTools.vcxproj.filters
cryptoTools/Circuit/: BetaCircuit.cpp  BetaCircuit.h  BetaLibrary.cpp  BetaLibrary.h  Gate.h  MxBit.cpp  MxBit.h  MxCircuit.cpp  MxCircuit.h  MxCircuitLibrary.cpp  MxCircuitLibrary.h  MxTypes.h  betacircuit.h
cryptoTools/Common/: Aligned.h  ArrayView.h  Bit.h  BitIterator.cpp  BitIterator.h  BitVector.cpp  BitVector.h  ByteStream.cpp  ByteStream.h  CLP.cpp  CLP.h  CuckooHasher.cpp  CuckooHasher.h  CuckooIndex.cpp  CuckooIndex.h  CuckooMap.h  Defines.cpp  Defines.h  Exceptions.h  Finally.h  Log.cpp  Log.h  Matrix.h  MatrixView.h  Range.h  TestCollection.cpp  TestCollection.h  ThreadBarrier.h  Timer.cpp  Timer.h  Version.h  block.cpp  block.h  config.h  config.h.in
cryptoTools/Crypto/: AES.cpp  AES.h  Blake2.cpp  Blake2.h  Commit.h  Curve.cpp  Curve.h  Hashable.h  MultiKeyAES.h  PRNG.cpp  PRNG.h  RCurve.cpp  RCurve.h  Randen.cpp  Randen.h  RandomOracle.h  Rijndael256.cpp  Rijndael256.h  SodiumCurve.cpp  SodiumCurve.h  sha1.cpp  sha1.h
cryptoTools/Crypto/ChaCha/: ChaCha-xmm5.s  ChaCha.cpp  ChaCha.h  ecrypt-portable.h
cryptoTools/Crypto/asm/: sha_win64.asm
cryptoTools/Crypto/blake2/: blake2-config.h  blake2.h  blake2bp.c  blake2xb.c
cryptoTools/Crypto/blake2/c/: blake2-impl.h  blake2.h  blake2b-ref.c  blake2b-ref.cpp  blake2bp-ref.c  blake2bp-ref.cpp  blake2s-ref.c  blake2s-ref.cpp  blake2sp-ref.c  blake2sp-ref.cpp  blake2xb-ref.c  blake2xb-ref.cpp  blake2xs-ref.c  blake2xs-ref.cpp
cryptoTools/Crypto/blake2/sse/: blake2-config.h  blake2-impl.h  blake2.h  blake2b-load-sse2.h  blake2b-load-sse41.h  blake2b-round.h  blake2b.c  blake2b.cpp  blake2bp.c  blake2bp.cpp  blake2xb.c  blake2xb.cpp
cryptoTools/Network/: Acceptor.cpp  Acceptor.h  BtAcceptor.cpp  BtAcceptor.h  BtChannel.cpp  BtChannel.h  BtEndpoint.cpp  BtEndpoint.h  BtIOService.cpp  BtIOService.h  BtSocket.h  Channel.cpp  Channel.h  Endpoint.cpp  Endpoint.h  IOService.cpp  IOService.h  IoBuffer.cpp  IoBuffer.h  Session.cpp  Session.h  SocketAdapter.cpp  SocketAdapter.h  TLS.cpp  TLS.h  util.h
cryptoTools/gsl/: gls-lite.hpp  gsl  gsl_algorithm  gsl_util  multi_span  span  string_span
cryptoTools_Tests/: cryptoTools_Tests.vcxproj.filters
cryptoTools_TestsVS/: cryptoTools_TestsVS.vcxproj  cryptoTools_TestsVS.vcxproj.filters
ctFrontend/: UnitTests.cpp  UnitTests.h  ctFrontend.vcxproj
frontend_cryptoTools/: CMakeLists.txt  UnitTests.cpp  frontend_cryptoTools.args.json  frontend_cryptoTools.vcxproj  frontend_cryptoTools.vcxproj.filters  main.cpp  signalHandle.cpp
frontend_cryptoTools/LDPC/: FWPC.cpp  FWPC.h  Graph.cpp  Graph.h  LDPC.cpp  LDPC.h  LDPC_decoder.cpp  LDPC_decoder.h  LDPC_encoder.cpp  LDPC_encoder.h  LDPC_generator.cpp  LDPC_generator.h  LdpcDecoder.cpp  LdpcDecoder.h  LdpcEncoder.cpp  LdpcEncoder.h  LdpcSampler.cpp  LdpcSampler.h  Mtx.cpp  Mtx.h  Test.cpp  Test.h  libdivide.h  rank.cpp  rank.h  simple_bitarray.h
frontend_cryptoTools/Tutorials/: Network.cpp  Network.h
frontend_cryptoTools/cuckoo/: SimpleCuckoo.cpp  SimpleCuckoo.h  bounds2.xlsx  cuckooTests.cpp
gsl/: gsl.h  gsl_algorithm.h  gsl_util.h  multi_span.h  span.h  string_span.h
include/cryptoTools/Common/: BitVector.h  ByteStream.h  CuckooHasher.h  CuckooMap.h  Defines.h
include/cryptoTools/Network/: BtAcceptor.h  BtChannel.h  BtEndpoint.h  BtIOService.h  BtSocket.h  Channel.h
src/Common/: BitVector.cpp  ByteStream.cpp  CuckooHasher.cpp
src/Network/: BtAcceptor.cpp  BtChannel.cpp  BtEndpoint.cpp  BtIOService.cpp  Channel.cpp
testsVS_cryptoTools/: AES_TestsVS.cpp  BtChannel_TestsVS.cpp  Cuckoo_TestsVS.cpp  Ecc_TestsVS.cpp  Misc_Tests_VS.cpp  stdafx.cpp  testsVS_cryptoTools.vcxproj  testsVS_cryptoTools.vcxproj.filters
tests_cryptoTools/: AES_Tests.cpp  AES_Tests.h  BtChannel_Tests.cpp  BtChannel_Tests.h  CMakeLists.txt  Circuit_Tests.cpp  Circuit_Tests.h  Circuit_aes_Tests.cpp  Common.cpp  Common.h  Cuckoo_Tests.cpp  Cuckoo_Tests.h  Ecc_Tests.cpp  Ecc_Tests.h  Misc_Tests.cpp  Misc_Tests.h  MxCircuit_Tests.cpp  MxCircuit_Tests.h  OpenSSL_Tests.cpp  OpenSSL_Tests.h  REcc_Tests.cpp  Rijndael256_Tests.cpp  Rijndael256_Tests.h  SimpleCuckoo.cpp  SimpleCuckoo.h  UnitTests.cpp  UnitTests.h  WolfSSL_Tests.cpp  WolfSSL_Tests.h  block_Tests.cpp  tests_cryptoTools.vcxproj  tests_cryptoTools.vcxproj.filters
tests_cryptoTools/cmakeTests/: CMakeLists.txt  main.cpp
tests_cryptoTools/projects/: CMakeLists.txt  src.cpp
